# midrasai

./: .gitignore  Justfile  LICENSE  README.md  pyproject.toml  pyrightconfig.json  taskfile.yaml
examples/vector_search/: vector_search.ipynb
midrasai/: __init__.py  _abc.py  _constants.py  cli.py  client.py  typedefs.py  types.py
midrasai/client/: __init__.py  _abc.py  main.py  utils.py
midrasai/client/_vector_module/: __init__.py  abc.py  qdrant.py
midrasai/local/: __init__.py  main.py  model.py  processing.py  server.py
midrasai/vectordb/: __init__.py  _abc.py  _qdrant.py
tests/: test_client.py  test_local_midras.py  test_midras_client.py  test_midras_server.py
tests/vectordb/: test_qdrant.py
