[tool.poetry]
name = "midrasai"
version = "0.1.2"
description = ""
authors = ["ajac-zero <ajcardoza2000@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
midrasai = "midrasai.cli:midrascli"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
torch = { version = "^2.4", optional = true }
transformers = { version = "^4.44", optional = true }
peft = { version = "^0.12", optional = true }
pillow = { version = "^10", optional = true }
fastapi = { extras = ["standard"], version = "^0", optional = true }
huggingface-hub = { extras = ["cli"], version = "^0", optional = true }

[tool.poetry.extras]
local = [
    "torch",
    "transformers",
    "peft",
    "pillow",
    "fastapi",
    "huggingface-hub",
]

[tool.poetry.group.local.dependencies]
torch = "^2.4"
transformers = "^4.44"
peft = "^0.12"
pillow = "^10.4"
fastapi = { extras = ["standard"], version = "^0" }
huggingface-hub = { extras = ["cli"], version = "^0" }


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
poethepoet = "^0.28.0"
pytest = "^8.3.2"


[tool.poetry.group.docs.dependencies]
qdrant-client = "^1.11.1"
ipykernel = "^6.29.5"
pdf2image = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
